[package]
name = "into-attr-derive"
version = "0.2.1"
edition = "2021"
license-file = "../LICENSE"
license = "MIT"
description = "derive for attributes for graphviz-rust lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
dot-generator = { workspace = true }
dot-structures = { workspace = true }
into-attr = { workspace = true }
quote = "1.0"
syn = "1.0"
